<resources>
    <string name="app_name">OneLook</string>
    <string name="server_client_id">3643895289-vj4j99mvqp7162uh3gldb3nr6kc9dvfs.apps.googleusercontent.com</string>
    <string name="facebook_app_id">201144586141390</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">cf5e90e699c41c24edcfe2886f8ca65b</string>
    <string name="welcome_screen_title">Welcome to\n OneLook</string>
    <string name="welcome_screen_subtitle">Just take a look and take action!</string>
    <string name="welcome_screen_primary_button_text">Let\'s start</string>
    <string name="skip_intro_button">Skip intro</string>
    <string name="onboarding_image_view_pic">calm character</string>
    <string name="welcome_image_view_logo_content_description">application logo</string>
    <string name="onboarding_1_text_view_title">Keep calm and stay in control</string>
    <string name="onboarding_1_text_view_subtitle">You can check your health with just one look.</string>
    <string name="onboarding_1_image_view_next">Next Button</string>
    <string name="onboarding_2_image_view_pill">Character takes a pill</string>
    <string name="onboarding_2_text_view_title">Don’t miss a single pill, ever!</string>
    <string name="onboarding_2_text_view_subtitle">Plan your supplementation in details.</string>
    <string name="onboarding_3_text_view_title"><![CDATA[Exercise more & breathe better]]></string>
    <string name="onboarding_3_text_view_subtitle">Learn, measure, set daily goals.</string>
    <string name="sign_up_text_view_header">Create an account</string>
    <string name="text_view_name_label">Full Name</string>
    <string name="sign_up_text_input_name">Enter your name</string>
    <string name="sign_up_text_view_email">E-mail</string>
    <string name="sign_up_text_input_email">Enter your e-mail</string>
    <string name="sign_up_text_view_password">Password</string>
    <string name="sign_up_text_input_password">Enter a password</string>
    <string name="text_view_error">At least 8 characters</string>
    <string name="text_view_password_error_2">Both uppercase and lowercase characters</string>
    <string name="text_view_password_error_3">At least one number or symbol</string>
    <string name="sign_up_privacy_policy">By continuing you accept our Privacy Policy and Term of Use</string>
    <string name="sing_up_image_button_password_visibility">password visibility toggle</string>
    <string name="sing_up_button_sign_up">Sign UP</string>
    <string name="sign_up_text_view_divider_or">Or</string>
    <string name="sign_up_image_button_google">sign up with Google</string>
    <string name="sign_up_image_button_facebook">sign up with Facebook</string>
    <string name="sign_up_text_view_already_have_an_account">Already have an account?</string>
    <string name="sign_up_text_view_login">Login</string>
    <string name="fill_required_fields">Please fill in all the required fields.</string>
    <string name="login_text_view_header">Welcome back</string>
    <string name="login_text_view_forgot_your_password">Forgot your password?</string>
    <string name="password_reminder_1_text_view_header">Enter your e-mail</string>
    <string name="password_reminder_1_text_view_explaination">You will receive a link to confirm the password change to the e-mail address provided</string>
    <string name="login_button_login">Log in</string>
    <string name="login_text_view_dont_have_an_account">Don’t have an account yet?</string>
    <string name="login_text_view_sign_up">Sign up</string>
    <string name="password_reminder_1_button_confirm_email">Confirm e-mail</string>
    <string name="password_reminder_2_button_confirm_password">Confrim password</string>
    <string name="password_reminder_2_text_view_header">Enter a new password</string>
    <string name="password_reminder_1_text_view_message">Your password has\n been changed</string>
    <string name="existing_email">Email already in use. Please choose a different email or sign in with your existing account.</string>
    <string name="invalid_email">The email address is invalid or incorrectly formatted.</string>
    <string name="unexpected_error_2">An unexpected error occurred. Please try again later or contact support for assistance.</string>
    <string name="no_connection">No internet connection</string>
    <string name="no_google_accounts">No Google accounts found on this device</string>
    <string name="unexpected_error">Unexpected error occurred. Please try again</string>
    <string name="not_exist_email">The email address provided does not exist in our records. Please ensure that you have entered the correct email or consider signing up for an account.</string>
    <string name="wrong_password">The password entered is incorrect. Please double-check your password or reset it by clicking on \'Forgot your password?\'.</string>
    <string name="too_many_requests">Access to your account has been temporarily blocked due to excessive failed login attempts. Please wait for some time.</string>
    <string name="no_registered_accounts">No registered accounts found. Please sign up first.</string>
    <string name="empty_email_field">Please fill in the email field.</string>
    <string name="not_exist_email_reset_password">The email address provided does not exist in our records. Please ensure that you have entered the correct email.</string>
    <string name="sent_password_reset_email">Sent a password reset email to \'%s\'</string>
    <string name="account_not_registered_yet">This account not registered yet. Please sign up first</string>
    <string name="account_already_registered">This account is already registered. Please sign in instead.</string>
    <string name="home_text_view_greeting">Hi %s!</string>
    <string name="home_text_view_to_do_lit">To-do list</string>
    <string name="home_button_add_task">Add task</string>
    <string name="home_image_button_add_task">Add task</string>
    <string name="item_activity_task_image_view_activity_icon">Image represents the activity</string>
    <string name="item_supplement_history_text_view_task_name">%d %s %s meal</string>
    <string name="home_button_continue_exercise">Continue exercise</string>
    <string name="menu_fragment_home_action_notifications">Notifications</string>
    <string name="menu_bottom_navigation_action_home">Home</string>
    <string name="menu_bottom_navigation_action_timer">Timer</string>
    <string name="menu_bottom_navigation_action_progress">Progress</string>
    <string name="menu_bottom_navigation_action_settings">Settings</string>
    <string name="home_image_view_no_data">No data</string>
    <string name="add_task_dialog_title">Choose task category</string>
    <string name="add_task_button_activity">Activity</string>
    <string name="add_task_button_supplement">Supplement</string>
    <string name="add_task_text_view_title">Choose task category</string>
    <string name="add_supplement_text_view_header">Add Supplement</string>
    <string name="add_supplement_image_button">Close dialog of add supplement</string>
    <string name="add_supplement_text_view_supplement_name">Supplement Name</string>
    <string name="add_supplement_edit_text_supplement_name">Type name of the supplement</string>
    <string name="add_supplement_image_button_pill_form">Supplement pill form</string>
    <string name="add_supplement_text_view_pill_form">Pill</string>
    <string name="add_supplement_image_button_tablet_form">Supplement table form</string>
    <string name="add_supplement_text_view_tablet_form">Tablet</string>
    <string name="add_supplement_image_button_sachet_form">Supplement sachet form</string>
    <string name="add_supplement_text_view_sachet_form">Sachet</string>
    <string name="add_supplement_image_button_drops_form">Supplement drops form</string>
    <string name="add_supplement_text_view_drops_form">Drops</string>
    <string name="add_supplement_image_button_spoon_form">Supplement spoon form</string>
    <string name="add_supplement_text_view_spoon_form">Spoon</string>
    <string name="add_supplement_text_view_dosage">Dosage</string>
    <string name="add_supplement_text_view_dosage_explanation">(Times a day)</string>
    <string name="add_supplement_text_view_frequency">Frequency</string>
    <string name="pill">pill</string>
    <string name="tablet">tablet</string>
    <string name="sachet">sachet</string>
    <string name="drops">drops</string>
    <string name="spoon">spoon</string>
    <string name="frequency_every_day">everyday</string>
    <string name="frequency_every_n_days">every %d days</string>
    <string name="add_supplement_text_view_duration">duration</string>
    <string name="duration_one_day">1 day</string>
    <string name="duration_n_days">%d days</string>
    <string name="duration_un_specified">unspecified</string>
    <string name="add_supplement_text_view_form">form</string>
    <string name="add_supplement_text_view_time_of_day">Time of day</string>
    <string name="morning">morning</string>
    <string name="afternoon">afternoon</string>
    <string name="evening">evening</string>
    <string name="night">night</string>
    <string name="dosage_must_be_one">Set the dosage to one in order to make a selection.</string>
    <string name="button_add_custom_time">Add custom time</string>
    <string name="add_supplement_text_view_taking_with_meals">Taking with meals</string>
    <string name="before_meal">before</string>
    <string name="after_meal">after</string>
    <string name="during_meal">with</string>
    <string name="add_supplement_text_view_set_reminder">Set Reminder</string>
    <string name="text_view_reminder_before">%d minutes before the time</string>
    <string name="text_view_reminder_after">%d minutes after the time</string>
    <string name="button_add_supplement">Add supplement</string>
    <string name="add_activity_image_button_close">Close fragment of add activity</string>
    <string name="add_activity_text_view_header">Add Activity</string>
    <string name="add_activity_text_view_type">Choose the type of activity</string>
    <string name="running">running</string>
    <string name="walking">walking</string>
    <string name="fitness">fitness</string>
    <string name="yoga">yoga</string>
    <string name="rollerskating">rollerskating</string>
    <string name="breathing">breathing</string>
    <string name="add_activity_text_view_duration">Activity Duration</string>
    <string name="add_activity_text_view_duration_explanation">(hours/minutes)</string>
    <string name="add_activity_text_view_colon">:</string>
    <string name="custom_time_text">%s : %s</string>
    <string name="scroll_to_see_content">Scroll to see remaining content</string>
    <string name="supplement_added">%s supplement added successfully</string>
    <string name="activity_added">%s activity added successfully</string>
    <string name="settings_text_view_title">Settings</string>
    <string name="settings_image_button_activity_manager">Icon of activity manager settings</string>
    <string name="settings_text_view_activity_manager">Activity Manager</string>
    <string name="settings_image_button_notification_settings">Icon of notification settings</string>
    <string name="settings_text_view_notification_settings">Notification Settings</string>
    <string name="settings_image_button_personal_data">Icon of personal data settings</string>
    <string name="settings_text_view_personal_data">Personal Data</string>
    <string name="onelook_phone_number">+42 564 342 786</string>
    <string name="onelook_email">contact@onelook.com</string>
    <string name="contact_us_text_view_location">One Look Corp.</string>
    <string name="onelook_location">1277 Saige Point Apt. 140\n65479 West Shaun,\nOklahoma</string>
    <string name="contact_us_tool_bar_title">Contact Us</string>
    <string name="contact_us_text_view_logo">One Look</string>
</resources>