<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/h_padding"
    tools:context=".ui.login.passwordreminder1.PasswordReminder1Fragment">

    <TextView
        android:id="@+id/text_view_header"
        style="@style/CustomHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xh_margin"
        android:text="@string/password_reminder_1_text_view_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_explanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/m_margin"
        android:text="@string/password_reminder_1_text_view_explaination"
        android:textAlignment="center"
        android:textColor="@color/dark_grey"
        app:layout_constraintTop_toBottomOf="@id/text_view_header" />

    <LinearLayout
        android:id="@+id/linear_layout_text_inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/m_margin"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/text_view_explanation">

        <TextView
            android:id="@+id/text_view_email"
            style="@style/CustomTextInputTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_text_view_email" />

        <EditText
            android:id="@+id/text_input_email"
            style="@style/CustomTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/m_height"
            android:layout_marginBottom="12dp"
            android:autofillHints="emailAddress"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/sign_up_text_input_email"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/text_view_error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m_margin"
            android:drawablePadding="@dimen/s_padding"
            android:text="@string/text_view_error"
            android:textColor="@color/alert"
            android:visibility="invisible"
            app:drawableStartCompat="@drawable/ic_error"
            app:layout_constraintTop_toBottomOf="@id/linear_layout_text_inputs"
            tools:text="Please fill in all the required fields."
            tools:visibility="visible" />
    </LinearLayout>

    <Button
        android:id="@+id/button_confirm_email"
        style="@style/CustomPrimaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/xh_margin"
        android:text="@string/password_reminder_1_button_confirm_email"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>