<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSurface"
    android:paddingHorizontal="@dimen/h_padding"
    android:paddingTop="@dimen/m_padding"
    tools:context=".ui.addsupplement.AddSupplementFragment"
    tools:scrollY="1000px">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/image_button_close"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:background="@drawable/bg_ic"
            android:contentDescription="@string/add_supplement_image_button"
            android:src="@drawable/ic_close"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/text_view_header"
            style="@style/CustomHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/add_task_text_view_header" />

        <TextView
            android:id="@+id/text_view_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/add_supplement_text_view_supplement_name"
            android:textColor="?colorOnSurface"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/text_input_name"
            style="@style/CustomTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/m_height"
            android:layout_marginTop="@dimen/s_margin"
            android:hint="@string/add_supplement_edit_text_supplement_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/m_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_supplement_text_view_form"
            android:textColor="?colorOnSurface"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_forms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/s_margin"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="10"
            tools:listitem="@layout/item_selectable_rect" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/m_margin" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_supplement_text_view_dosage"
                android:textColor="?colorOnSurface"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/s_margin"
                android:text="@string/add_supplement_text_view_dosage_explanation"
                android:textSize="12sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_dosages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/s_margin"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="10"
            tools:listitem="@layout/item_selectable_number" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/m_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_supplement_text_view_frequency"
            android:textColor="?colorOnSurface"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_frequency"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/s_margin"
            android:background="@drawable/bg_spinner"
            android:paddingHorizontal="16dp"
            tools:listitem="@layout/item_spinner_selected" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m_margin"
            android:text="@string/add_supplement_text_view_duration"
            android:textColor="?colorOnSurface"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_duration"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/s_margin"
            android:background="@drawable/bg_spinner"
            android:paddingHorizontal="16dp"
            tools:listitem="@layout/item_spinner_selected" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m_margin"
            android:text="@string/add_supplement_text_view_time_of_day"
            android:textColor="?colorOnSurface"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_time_of_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/s_margin"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="10"
            tools:listitem="@layout/item_selectable_rect" />

        <Button
            android:id="@+id/button_add_custom_time"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m_margin"
            android:text="@string/button_add_custom_time"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="bold"
            app:strokeColor="?colorPrimary" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/m_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_supplement_text_view_taking_with_meals"
            android:textColor="?colorOnSurface"
            android:textStyle="bold" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_taking_with_meals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleLine="true"
                app:singleSelection="true" />
        </HorizontalScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xxh_margin"
            android:text="@string/add_supplement_text_view_set_reminder"
            android:textColor="?colorOnSurface"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_reminder_before"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m_margin"
            android:text="@string/text_view_reminder_before"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:thumbTint="@drawable/selector_switch_thumb"
            app:trackTint="@drawable/selector_switch_track"
            tools:checked="true" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/s_margin" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_reminder_after"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_view_reminder_after"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:thumbTint="@drawable/selector_switch_thumb"
            app:trackTint="@drawable/selector_switch_track" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/m_margin" />

        <Button
            android:id="@+id/button_add_supplement"
            style="@style/CustomPrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xh_margin"
            android:text="@string/button_add_supplement" />

    </LinearLayout>
</ScrollView>