<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".profile_and_settings.presentation.contactus.ContactUsFragment">

    <Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:navigationIcon="@drawable/ic_left_arrow_long"
        android:title="@string/contact_us_tool_bar_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m_margin"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/h_padding">

            <TextView
                android:id="@+id/text_view_logo"
                style="@style/CustomTextViewWithIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_us_text_view_logo"
                android:textSize="@dimen/large_text_size"
                app:drawableStartCompat="@drawable/ic_brand_logo_tool_bar" />

            <TextView
                android:id="@+id/text_view_phone_number"
                style="@style/CustomTextViewWithIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/h_margin"
                android:text="@string/onelook_phone_number"
                app:drawableStartCompat="@drawable/ic_phone_number" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp" />

            <TextView
                android:id="@+id/text_view_email"
                style="@style/CustomTextViewWithIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/onelook_email"
                app:drawableStartCompat="@drawable/ic_email" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp" />

            <LinearLayout
                android:id="@+id/linear_layout_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_view_location"
                    style="@style/CustomTextViewWithIcon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_us_text_view_location"
                    app:drawableStartCompat="@drawable/ic_location" />

                <TextView
                    android:id="@+id/text_view_location_details"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="44dp"
                    android:text="@string/onelook_location" />
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>